# sentinel

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
backend/: Dockerfile  go.mod  go.sum
backend/cmd/reindex/: main.go
backend/cmd/sentinel/: main.go
backend/internal/api/: handlers.go  server.go
backend/internal/config/: config.go
backend/internal/domain/: article.go  topic.go
backend/internal/fetcher/: fetcher.go  newsapi.go
backend/internal/geocoder/: cities.go  geocoder.go  geocoder_test.go  llm.go
backend/internal/pipeline/: pipeline.go
backend/internal/rag/: rag.go
backend/internal/scheduler/: scheduler.go
backend/internal/storage/: postgres.go  storage.go
backend/internal/storage/migrations/: 0001_init.sql
backend/migrations/: 0001_init.sql
backend/pkg/groq/: client.go
backend/pkg/mapbox/: geocode.go
backend/pkg/newsapi/: client.go
backend/pkg/ollama/: client.go
backend/pkg/voyage/: client.go
docs/: FONCTIONNALITES.md
frontend/: app.js  index.html  package-lock.json  package.json  style.css  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  api.ts  styles.css
frontend/src/components/: AnswerPanel.tsx  ArticleCard.tsx  ArticlePanel.tsx  AskBar.tsx  FilterBar.tsx  MapView.tsx  mapLayers.ts
src/app/: config.py  main.py
