[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
package = true

[project]
name = "sentinel2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.136.1",
    "mlflow>=3.12.0",
    "newsapi-python>=0.2.7",
    "pydantic-settings>=2.14.1",
    "requests>=2.34.2",
    "uvicorn>=0.47.0",
]

[project.scripts]
sentinel2 = "src.app.main:start"